# praxia

./: .env.example  .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NEXT_ACTIONS.ja.md  NOTICE.md  PUBLISH.md  README.md  SECURITY.md  TODO.md  pyproject.toml  wrangler.jsonc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  dco.yml  pages.yml  publish.yml  security.yml  test.yml
.streamlit/: config.toml
agentloom/: __init__.py
agentloom/cli/: __init__.py  main.py
agentloom/core/: __init__.py  agent.py  flow.py  llm.py  orchestrator.py
agentloom/eval/: __init__.py  hallucination.py
agentloom/flows/: __init__.py  logic_checker.py  rag_optimizer.py  sales_agent.py
agentloom/memory/: __init__.py  consolidator.py  markdown_store.py  personal.py  promoter.py  shared.py
agentloom/memory/backends/: __init__.py  json_backend.py  langmem_backend.py  letta_backend.py  mem0_backend.py  zep_backend.py
agentloom/skills/: __init__.py  registry.py  skill.py
agentloom/skills/business/: __init__.py  design.py  investment.py  legal.py  patent.py  purchasing.py  sales.py
agentloom/ui/: __init__.py  app.py  launcher.py
docs/: COMMANDED_AGENT.md  COMPARISON.md  CUSTOM_CONNECTORS.ja.md  CUSTOM_CONNECTORS.md  EVALUATION.ja.md  EVALUATION.md  FEATURES.md  OAUTH_SCOPES.ja.md  OAUTH_SCOPES.md  PLUGINS.md  VERIFICATION_FINDINGS.md  adoption-strategy.ja.md  architecture.md  business-plan.ja.md  deployment-modes.ja.md  deployment-modes.md  design-philosophy.md  i18n.ja.md  i18n.md  memory-cycle.md  quickstart.ja.md  quickstart.md  use-cases.ja.md  use-cases.md  zenn_article_draft.md
docs/landing/: 404.html  DEPLOY.md  README.md  _redirects  consent.js  i18n.js  index.html  styles.css
docs/landing/portal/: index.html
docs/legal/: ACCEPTABLE_USE.md  COOKIES.md  GDPR_NOTES.ja.md  GDPR_NOTES.md  PRIVACY.md  README.md  TERMS.md  TRADEMARK.ja.md  TRADEMARK.md
docs/specs/: README.md  basic-design.en.md  basic-design.ja.md  detailed-design.en.md  detailed-design.ja.md  functional-spec.ja.md  interface-spec.en.md  interface-spec.ja.md
docs/zenn/: 00_overview.md  01_investment.md  02_sales.md  03_design.md  04_purchasing.md  05_patent.md  06_legal.md
examples/logic_checker/: run.py
examples/rag_optimizer/: run.py
examples/sales_agent/: run.py
posts/: 2026-06-praxia-chat-driven-automation.md  2026-06-video-script-60s.md
praxia/: __init__.py  config.py
praxia/agent/: __init__.py  autonomous.py  commander.py  decomposer.py  file_tools.py  result.py  tools.py  verifier.py  web_search.py
praxia/analytics/: __init__.py  dashboard.py
praxia/auth/: __init__.py  audit.py  exports.py  manager.py  policies.py  rbac.py  sessions.py  sso.py  sso_state.py  users.py
praxia/cli/: __init__.py  _console.py  main.py
praxia/cli/commands/: __init__.py  admin.py  agent.py  config.py  connector.py  user.py
praxia/connectors/: __init__.py  _helpers.py  azure_blob.py  base.py  box.py  confluence.py  dropbox_.py  email_.py  gcs.py  gdrive.py  github.py  hubspot.py  jira.py  kintone.py  linear.py  notion.py  registry.py  s3.py  salesforce.py  sharepoint.py  slack.py  teams.py  webdav.py  zendesk.py
praxia/connectors/oauth/: __init__.py  flow.py  kms.py  providers.py  state_store.py  token_store.py
praxia/core/: __init__.py  agent.py  flow.py  llm.py  orchestrator.py
praxia/data/: __init__.py  scopes.py  threads.py
praxia/eval/: __init__.py  hallucination.py  metrics.py
praxia/experiments/: __init__.py  framework.py
praxia/extensions/: __init__.py  registry.py
praxia/flows/: __init__.py  logic_checker.py  rag_optimizer.py  sales_agent.py
praxia/io/: __init__.py  document_reviewer.py  embeddings.py  pptx_describer.py  pptx_to_png.py  query_expansion.py  slide_style.py  slide_templates.py
praxia/io/audio/: __init__.py  stt.py  tts.py
praxia/io/exporters/: __init__.py  base.py  docx_exporter.py  html_exporter.py  json_exporter.py  (+2 more)
praxia/mcp/: __init__.py  http.py  server.py
praxia/memory/: __init__.py  composite.py  consolidator.py  markdown_store.py  personal.py  policy.py  promoter.py  router.py  shared.py
praxia/scim/: __init__.py  server.py
praxia/server/: __init__.py  app.py
praxia/skills/: __init__.py  output_format.py  prompt_designer.py  prompts.py  registry.py  skill.py
praxia/ui/: __init__.py  app.py  i18n.py  launcher.py  responsive.py  settings_guide.py
praxia/webhooks/: __init__.py  framework.py
tests/: test_document_designer.py  test_smoke.py
tests/evaluation/: __init__.py  conftest.py  test_eval_agent.py  test_eval_auth.py  test_eval_batch_and_task_lookup_tools.py  test_eval_batches_api.py  test_eval_chat_driven_orchestration.py  test_eval_cli.py  test_eval_commander.py  test_eval_composite.py  test_eval_designer_routing.py  test_eval_document_metadata_tools.py  test_eval_document_reviewer.py  test_eval_documents_api.py  test_eval_experiments.py  test_eval_exporters.py  test_eval_extensions.py  test_eval_extensions_v11.py  test_eval_file_tools.py  test_eval_i18n.py  test_eval_landing_i18n.py  test_eval_memory.py  test_eval_new_connectors.py  test_eval_oauth.py  test_eval_parsers.py  test_eval_promotion_gate.py  test_eval_prompt_designer.py  test_eval_query_expansion.py  test_eval_schedules_api.py  test_eval_skills.py  test_eval_tasks_api.py  test_eval_threads_and_agent_api.py  test_eval_verification_findings.py  test_eval_verifier.py  test_eval_vision_pipeline.py  test_eval_web_search.py
tests/llm_eval/: __init__.py  conftest.py  framework.py  test_framework.py  test_skill_quality.py
web-publish/: 404.html  DEPLOY.md  README.md  _headers  _redirects  analytics.js  consent.js  i18n.js  index.html  privacy.html  robots.txt  sitemap-mirror.xml  sitemap.xml  styles.css
web-publish/portal/: index.html  portal.css
web-publish/videos/: demo-60s.webm
zenn-publish/: 00_overview.md  01_investment.md  02_sales.md  03_design.md  04_purchasing.md  05_patent.md  06_legal.md
(+45 files in other folders)
