[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "praxia"
version = "0.1.0a0"
description = "Specialized multi-agent orchestrator with cyclic personal/organizational memory and skills"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "GenArch" },
    { name = "Praxia Contributors" },
]
keywords = [
    "agent",
    "multi-agent",
    "orchestrator",
    "memory",
    "rag",
    "llm",
    "tacit-knowledge",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Multi-provider LLM abstraction (OpenAI / Anthropic / Gemini / Qwen / Ollama / etc.)
    "litellm>=1.51.0",
    # Personal memory layer
    "mem0ai>=0.1.40",
    # Embeddings / vector store
    "chromadb>=0.5.0",
    # Validation
    "pydantic>=2.7",
    # CLI
    "typer>=0.12",
    "rich>=13.7",
    # Markdown frontmatter for the frozen layer
    "python-frontmatter>=1.1",
    # YAML for flow definitions
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.40",
    "plotly>=5.24",
]
graph = [
    # Optional: only when adopting the 5th layer (Graph)
    "neo4j>=5.24",
    "graphiti-core>=0.3",
]
qwen-local = [
    # Run Qwen locally via Ollama (LiteLLM bridges automatically)
    "ollama>=0.3",
]
# --- External storage / SaaS connectors ---
box = ["boxsdk>=3.10"]
sharepoint = ["msal>=1.28", "requests>=2.31"]
dropbox = ["dropbox>=11"]
gdrive = [
    "google-api-python-client>=2.130",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
]
kintone = ["requests>=2.31"]
salesforce = ["simple-salesforce>=1.12"]
connectors = [
    "praxia[box,sharepoint,dropbox,gdrive,kintone,salesforce]",
]
# --- File format parsers (Office + PDF) ---
office = [
    "pypdf>=4.0",            # PDF parsing
    "python-docx>=1.1",      # Word .docx
    "python-pptx>=0.6",      # PowerPoint .pptx
    "openpyxl>=3.1",         # Excel .xlsx
]
# --- Audio I/O (STT + TTS via cloud APIs) ---
audio = [
    "openai>=1.40",          # Whisper STT + OpenAI TTS
    "elevenlabs>=1.0",       # ElevenLabs TTS (optional)
]
# --- Local audio (no API keys, larger install) ---
audio-local = [
    "openai-whisper>=20231117",  # Local Whisper for STT
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]
all = [
    "praxia[ui,graph,qwen-local,connectors,office,audio,dev]",
]

[project.scripts]
praxia = "praxia.cli.main:app"
praxia-ui = "praxia.ui.launcher:main"

[project.urls]
Homepage = "https://github.com/your-org/praxia"
Documentation = "https://github.com/your-org/praxia/tree/main/docs"
Issues = "https://github.com/your-org/praxia/issues"

# --- Plug-in extension points ------------------------------------------------
# Third-party packages declare their own connectors / backends / skills / flows
# under these entry-point groups. Praxia auto-discovers them at startup.
#
# Example consumer pyproject.toml:
#
#   [project.entry-points."praxia.connectors"]
#   my_crm = "my_pkg.my_crm:MyCRMConnector"
#
#   [project.entry-points."praxia.memory_backends"]
#   pinecone = "my_pkg.pinecone_backend:PineconeBackend"
#
#   [project.entry-points."praxia.skills"]
#   hr_recruiting = "my_pkg.hr_recruiting:HRRecruitingSkill"
#
#   [project.entry-points."praxia.flows"]
#   incident_response = "my_pkg.incident_response:IncidentResponseFlow"

[project.entry-points."praxia.connectors"]
# Built-ins — listed for symmetry. Third-party packages add their own here.

[project.entry-points."praxia.memory_backends"]

[project.entry-points."praxia.skills"]

[project.entry-points."praxia.flows"]

[project.entry-points."praxia.parsers"]

[tool.hatch.build.targets.wheel]
packages = ["praxia"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
